2001-09-08  Bruno Haible  <haible@clisp.cons.org>

	* findprog.c: Include specification header before all other headers.
	* fstrcmp.c: Likewise.
	* full-write.c: Likewise.
	* hash.c: Likewise.
	* linebreak.c: Likewise.
	* mbswidth.c: Likewise.
	* progname.c: Likewise.
	* safe-read.c: Likewise.
	* wait-process.c: Likewise.
	* xerror.c: Likewise.
	* getline.c: Include getline.h.
	* mbswidth.h: Include <stddef.h>, for size_t.
	* wait-process.h: Include <unistd,h> and <sys/types.h>, for pid_t.

2001-09-08  Bruno Haible  <haible@clisp.cons.org>

	* javacomp.sh.in: New file.
	* javaexec.sh.in: New file.

2001-09-06  Bruno Haible  <haible@clisp.cons.org>

	* javacomp.h: New file.
	* javacomp.c: New file.
	* javaexec.h: New file.
	* javaexec.c: New file.
	* classpath.c: New file.
	* Makefile.am (EXTRA_DIST): Add classpath.c.
	(libnlsut_a_SOURCES): Add javacomp.c, javaexec.c.
	(noinst_HEADERS): Add javacomp.h, javaexec.h.

2001-09-06  Bruno Haible  <haible@clisp.cons.org>

	* sh-quote.h: New file.
	* sh-quote.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add sh-quote.c.
	(noinst_HEADERS): Add sh-quote.h.

2001-09-06  Bruno Haible  <haible@clisp.cons.org>

	* strpbrk.h: New file.
	* strpbrk.c: New file, from glibc-2.2.4.
	* Makefile.am (EXTRA_DIST): Add strpbrk.c.
	(noinst_HEADERS): Add strpbrk.h.

2001-09-06  Bruno Haible  <haible@clisp.cons.org>

	* setenv.h: New file.
	* setenv.c: New file, from glibc-2.2.4.
	* Makefile.am (EXTRA_DIST): Add setenv.c.
	(noinst_HEADERS): Add setenv.h.

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* mkdtemp.h: New file.
	* mkdtemp.c: New file, mostly taken from glibc-2.2.4.
	* tmpdir.h: New file.
	* tmpdir.c: New file, mostly taken from glibc-2.2.4.
	* Makefile.am (EXTRA_DIST): Add mkdtemp.c.
	(libnlsut_a_SOURCES): Add tmpdir.c.
	(noinst_HEADERS): Add mkdtemp.h, tmpdir.h.

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* execute.h: New file.
	* execute.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add execute.c.