@@ -53,6 +53,15 @@
 #define _(str) gettext (str)
 
 
+/* Prototypes for local functions.  Needed to ensure compiler checking of
+   function argument counts despite of K&R C function definition syntax.  */
+#ifdef EINTR
+static inline int nonintr_close PARAMS ((int fd));
+static inline int nonintr_open PARAMS ((const char *pathname, int oflag,
+					mode_t mode));
+#endif
+
+
 #ifdef EINTR
 
 /* EINTR handling for close(), open().
